--- a/web-development-solution.html
+++ b/web-development-solution.html
@@ -587,7 +587,9 @@
                                 <p>To maximize the amount of time visitors spend on your site, one key point about a
                                     good user friendly website design is visually appealing. Our expert front end
                                     developers work on building responsive designs in the manner of a fluid experience
-                                    across all of devices. If you are you looking for a <a href="wordpress-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">WordPress website designer</a> or a
+                                    across all of devices. If you are you looking for a <a
+                                        href="wordpress-development-services" style="font-weight: bold; color: #FE0094;"
+                                        target="_blank">WordPress website designer</a> or a
                                     Shopify web designer or anything of the sort, we provide you with the most intuitive
                                     interfaces in tandem with your brand identity and intuitive user interaction.
                                 </p>
@@ -597,7 +599,9 @@
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>A <a href="web-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">web application development</a> is one of our specialties so you are sure of fast,
+                                <p>A <a href="web-development-services" style="font-weight: bold; color: #FE0094;"
+                                        target="_blank">web application development</a> is one of our specialties so you
+                                    are sure of fast,
                                     secured and scalable platforms for your businesses. We have a fullstack developers
                                     who will turn your things into an amazing web application and everytime with latest
                                     technologies that don’t compromise quality or security while developing fullstack.
@@ -679,7 +683,9 @@
                             <h4>UI/UX Design Focused on User Engagement and Conversions</h4>
                         </div>
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>A well structured <a href="ui-ux-design" style="font-weight: bold; color: #FE0094;" target="_blank">UI/UX design</a> is a key to getting maximum user engagement. We are a team
+                            <p>A well structured <a href="ui-ux-design" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">UI/UX design</a> is a key to getting maximum user engagement. We are
+                                a team
                                 of expert designers and the best web developers that have a nutshell of intuitive
                                 interface that enables better user experience as well as increased conversion rates. We
                                 have web design and development strategies that will create solutions which are aligned
@@ -705,7 +711,9 @@
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Digital Minds On is dedicated to providing professional web development solutions that
                                 help your business grow. Whether your search is for custom website design cost, website
-                                design services, or a professional website designing company, <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> is here.
+                                design services, or a professional website designing company, <a href="/"
+                                    style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> is
+                                here.
                                 Get affordable website development services partnering with Digital Minds On.</p>
                         </div>
                         <div class="blog__details__social__icon" data-aos="fade-up" data-aos-duration="1500">
@@ -793,7 +801,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -807,7 +815,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -851,19 +859,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -878,19 +886,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -910,7 +918,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -922,8 +930,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
