--- a/what-is-software-development-a-comprehensive-guide.html
+++ b/what-is-software-development-a-comprehensive-guide.html
@@ -584,7 +584,9 @@
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p> From the app on your phone to the system powering your favorite website or the tools
-                                    behind that business you run, <a href="software-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">software development</a> is the skeleton of modern
+                                    behind that business you run, <a href="software-development-services"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">software
+                                        development</a> is the skeleton of modern
                                     technology. When it comes to software development it’s no surprise this is an
                                     important service in keeping a business up to date and growing, and as Minds On, we
                                     understand that.</p>
@@ -691,7 +693,8 @@
                         </div>
 
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Minds On</a> recognizes that businesses will not survive in today’s market without tailored
+                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Minds On</a>
+                                recognizes that businesses will not survive in today’s market without tailored
                                 software solutions. The experts on our team work with our clients closely to deliver
                                 quality software that addresses their challenges as well as goals.</p>
                             <p>We aim at delivering full end to end services from planning, feature development to
@@ -722,7 +725,8 @@
                                 because we aim to provide the best performance. We have experts who are passionate
                                 enough that we always make sure that our clients get solutions that will drive growth
                                 and success. If you are ready to write new software or further develop existing systems,
-                                help is on hand from <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Minds On</a> with the complexities of software development.</p>
+                                help is on hand from <a href="/" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">Minds On</a> with the complexities of software development.</p>
                         </div>
                         <div class="blog__details__social__icon" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
@@ -809,7 +813,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -823,7 +827,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -867,19 +871,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -894,19 +898,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -926,7 +930,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -938,8 +942,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
