--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -609,7 +609,9 @@
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>
-                                    Web Scripting is a subset of <a href="web-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">Web development</a> which primarily involves writing
+                                    Web Scripting is a subset of <a href="web-development-services"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">Web development</a>
+                                    which primarily involves writing
                                     scripts to develop websites or web applications. It includes frontend programming
                                     the part of the website that one can see and interact with, backend programming,
                                     which is everything that happens behind the scenes including serving functions and
@@ -733,7 +735,8 @@
                                 create interfaces through which we access information and services on the internet.
                                 The advancement of the web programming remains important for developers and business
                                 because it can shape the way new websites and application is built for the current
-                                and upcoming user experience. <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On </a> tries to follow those trends and
+                                and upcoming user experience. <a href="/" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">Digital Minds On </a> tries to follow those trends and
                                 provide our clients with the most progressive web development services.</p>
                         </div>
 
@@ -822,7 +825,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -836,7 +839,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -880,19 +883,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -907,19 +910,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -939,7 +942,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -951,8 +954,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
