--- a/what-is-wordpress-development.html
+++ b/what-is-wordpress-development.html
@@ -586,7 +586,9 @@
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>When it comes to having an online presence, it’s hard to argue with the fact that for
-                                    them WordPress would be the best choice. <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> being a professional
+                                    them WordPress would be the best choice. <a href="/"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a>
+                                    being a professional
                                     WordPress development company provides the best WordPress development services for
                                     your website and enhance the user experience. If you require a straightforward blog
                                     or an installation of an e-business solution, who you choose as your WordPress
@@ -652,7 +654,9 @@
                                 <h4>SEO-Friendly Websites</h4>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p> Another distinctive feature of WordPress is its <a href="seo-services" style="font-weight: bold; color: #FE0094;" target="_blank">SEO</a>. We are a WordPress web
+                                <p> Another distinctive feature of WordPress is its <a href="seo-services"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">SEO</a>. We are a
+                                    WordPress web
                                     development company and we always make any of our developments Search Engine
                                     friendly from scratch. This will mean that your website is not only attractive and
                                     easy for people to use but also one that will be easily found by the search engine.
@@ -739,8 +743,12 @@
                             <h2>Conclusion</h2>
                             <p>When you are going to revamp your old existing site and if you want to build a new one
                                 then the selection of a WordPress development company to do so becomes vital as to the
-                                success of your website. <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> provides expert <a href="wordpress-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">WordPress development
-                                services,</a> and we guarantee you that your website will be created according to your own
+                                success of your website. <a href="/" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">Digital Minds On</a> provides expert <a
+                                    href="wordpress-development-services" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">WordPress development
+                                    services,</a> and we guarantee you that your website will be created according to
+                                your own
                                 individual needs, giving you the best user experience and best SEO performance. Being a
                                 top WordPress development agency, we are here to help you, from designing a site right
                                 now to offering ongoing support.
@@ -832,7 +840,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -846,7 +854,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -890,19 +898,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -917,19 +925,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -949,7 +957,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -961,8 +969,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
