--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -588,7 +588,9 @@
                                     website users looking for customized and easy to use websites, it is imperative to
                                     incorporate a unique service provider who is a web development company in USA.
                                 </p>
-                                <p>Affordable professional web design company is what <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> boasts of, making
+                                <p>Affordable professional web design company is what <a href="/"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a>
+                                    boasts of, making
                                     it among the best web development companies in USA for custom web developing
                                     services. Whether it’s a distinct customized or a progressive Website Design, we
                                     guarantee that your web design not only gets you the looks you want but the
@@ -833,7 +835,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -847,7 +849,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -891,19 +893,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -918,19 +920,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -950,7 +952,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -962,8 +964,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
