--- a/What-is-application-development-a-detailed-guide-to-2025.html
+++ b/What-is-application-development-a-detailed-guide-to-2025.html
@@ -587,7 +587,9 @@
                                     come to rely on application development services companies. A leading player in the
                                     field, Digital Minds On offers a spectrum of development services to serve different
                                     business requirements. Come with me, we will discuss different types of application
-                                    development services, their advantages and how <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> helps businesses
+                                    development services, their advantages and how <a href="/"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a>
+                                    helps businesses
                                     reach their objectives through latest technologies.</p>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
@@ -608,7 +610,9 @@
                                 <p>
                                     With businesses trying to establish a direct connection with users by means of their
                                     smartphones or tablets, mobile applications have become an integral part of them.
-                                    The demand for ‘custom <a href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">mobile app development services</a> has increased massively due
+                                    The demand for ‘custom <a href="mobile-app-development-services"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">mobile app
+                                        development services</a> has increased massively due
                                     to the rise of smartphone.
                                 </p>
                                 <p>Digital Minds On also gives you a comprehensive list of mobile app development
@@ -722,7 +726,8 @@
                             <p> Application development is a big, big world. Businesses have the options to operate
                                 better, engage customers and achieve goals by focusing in on categories such as, desktop
                                 application development services and web application development services.</p>
-                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> is committed to offering the best professional services that are
+                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds
+                                    On</a> is committed to offering the best professional services that are
                                 tailored to meet the needs of our diverse clients. By joining us, you open doors to
                                 cutting edge technology that continues to drive success. Contact Digital Minds On see
                                 how our experience in application development services companies can make a difference
@@ -814,7 +819,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -828,7 +833,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -872,19 +877,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -899,19 +904,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -931,7 +936,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -943,8 +948,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
