--- a/blog.html
+++ b/blog.html
@@ -753,27 +753,27 @@
                             </div>
 
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
-                            data-aos-duration="2500">
-                            <div class="blog__4__single blog__3__single single__transform bg__pink">
-                                <div class="blog__4__img">
-                                    <img src="assets/img/blog/usa_company.png" alt="Digital_Marketing">
-                                </div>
-                                <div class="blog__4__time">
-                                    <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
-                                </div>
-                                <div class="blog__4__heading">
-                                    <h6><a href="web-development-solution" target="_blank">Expert Web
-                                            Development Company in USA</a></h6>
-                                </div>
-                                <div class="blog__4__text">
-                                    <p>Your business needs a unique USA web development company for success.</p>
-                                </div>
-                                <div class="blog__4__button">
-                                    <a class="default__button" href="web-development-solution"
-                                        target="_blank">READ MORE</a>
+                                data-aos-duration="2500">
+                                <div class="blog__4__single blog__3__single single__transform bg__pink">
+                                    <div class="blog__4__img">
+                                        <img src="assets/img/blog/usa_company.png" alt="Digital_Marketing">
+                                    </div>
+                                    <div class="blog__4__time">
+                                        <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
+                                    </div>
+                                    <div class="blog__4__heading">
+                                        <h6><a href="web-development-solution" target="_blank">Expert Web
+                                                Development Company in USA</a></h6>
+                                    </div>
+                                    <div class="blog__4__text">
+                                        <p>Your business needs a unique USA web development company for success.</p>
+                                    </div>
+                                    <div class="blog__4__button">
+                                        <a class="default__button" href="web-development-solution" target="_blank">READ
+                                            MORE</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                         </div>
                         <!-- <div class="pagination" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
@@ -841,7 +841,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -855,7 +855,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -899,19 +899,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -926,19 +926,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -958,7 +958,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -970,8 +970,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
