--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <!-- header start -->
 
-     
+
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -375,7 +375,8 @@
                                                     and Africa , ranging from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact" target="_blank">GET IN TECH</a>
+                                                <a class="default__button" href="contact" target="_blank">GET IN
+                                                    TECH</a>
                                             </div>
                                         </div>
                                     </div>
@@ -401,7 +402,8 @@
                                                     from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact" target="_blank">GET IN TECH</a>
+                                                <a class="default__button" href="contact" target="_blank">GET IN
+                                                    TECH</a>
                                             </div>
                                         </div>
                                     </div>
@@ -430,7 +432,8 @@
                                                 </p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact" target="_blank">GET IN TECH</a>
+                                                <a class="default__button" href="contact" target="_blank">GET IN
+                                                    TECH</a>
                                             </div>
                                         </div>
                                     </div>
@@ -507,7 +510,8 @@
                                 achieve your organization’s optimum and make your mark in your field.
 
                             </p>
-                            <a href="contact" target="_blank" class="default__button mt-3"><i class="bi bi-calendar-check"></i> Book
+                            <a href="contact" target="_blank" class="default__button mt-3"><i
+                                    class="bi bi-calendar-check"></i> Book
                                 Free
                                 Consultation</a>
                         </div>
@@ -526,13 +530,14 @@
                         <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="fade-up" data-aos-duration="2000">
                             <p class="mt-2">
                                 Digital Minds On specializes in delivering cutting-edge <a
-                                    href="software-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">
+                                    href="software-development-services" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">
                                     software development solutions</a>
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
                                 developers and designers collaborates to create high-quality, efficient, and scalable
                                 applications that drive productivity and innovation. With expertise in web and <a
-                                    href="mobile-app-development-services"
-                                    style="font-weight: bold; color: #FE0094;" target="_blank">mobile
+                                    href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;"
+                                    target="_blank">mobile
                                     development</a>, cloud solutions, and custom software, we help businesses streamline
                                 operations, enhance user experiences, and achieve their digital transformation goals.
                             </p>
@@ -631,7 +636,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="seo-services" target="_blank" class="mb-3 text-decoration-none" style="display: block;">
+                            <a href="seo-services" target="_blank" class="mb-3 text-decoration-none"
+                                style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -652,7 +658,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="ui-ux-design" target="_blank" class=" mb-3 text-decoration-none" style="display: block;">
+                            <a href="ui-ux-design" target="_blank" class=" mb-3 text-decoration-none"
+                                style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -674,7 +681,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="network-services" target="_blank" class=" mb-3 text-decoration-none" style="display: block;">
+                            <a href="network-services" target="_blank" class=" mb-3 text-decoration-none"
+                                style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -697,7 +705,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="content-creater" target="_blank" class="mb-3 text-decoration-none" style="display: block;">
+                            <a href="content-creater" target="_blank" class="mb-3 text-decoration-none"
+                                style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -776,8 +785,8 @@
                                     <span>03</span>
                                     <p>Years Experience</p>
                                     <div class="about__number__icon">
-                                        <a href="about" target="_blank"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                        <a href="about" target="_blank"> <svg width="34" height="34" viewBox="0 0 34 34"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -984,7 +993,8 @@
                                 <p>Lahore, Pakistan</p>
                             </li>
                         </ul>
-                        <a class="default__button" href="contact" target="_blank" style="margin-top: 40px;">CONTACT US</a>
+                        <a class="default__button" href="contact" target="_blank" style="margin-top: 40px;">CONTACT
+                            US</a>
                     </div>
                     <!-- contact form -->
                     <div class="col-md-6">
@@ -1526,7 +1536,7 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="/" target="_blank">
+                    <a href="/">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                         <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -1540,7 +1550,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <a class="offcanvas__logo_link" href="/" target="_blank">
+                                    <a class="offcanvas__logo_link" href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                     </a>
                                 </div>
@@ -1585,16 +1595,16 @@
                                             <a href="/">Home</a>
                                         </li>
                                         <li>
-                                            <a href="about" target="_blank">About us</a>
+                                            <a href="about">About us</a>
                                         </li>
                                         <li>
-                                            <a href="blog" target="_blank">Blog update</a>
+                                            <a href="blog">Blog update</a>
                                         </li>
                                         <li>
-                                            <a href="services" target="_blank">Our services</a>
+                                            <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="team" target="_blank">Team</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1608,19 +1618,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="project" target="_blank">Portfolio </a>
+                                            <a href="project">Portfolio </a>
                                         </li>
                                         <li>
-                                            <a href="seo-services" target="_blank">Seo Services</a>
+                                            <a href="seo-services">Seo Services</a>
                                         </li>
                                         <li>
-                                            <a href="faq" target="_blank">FAQ</a>
+                                            <a href="faq">FAQ</a>
                                         </li>
                                         <li>
-                                            <a href="contact" target="_blank">Customer support</a>
+                                            <a href="contact">Customer support</a>
                                         </li>
                                         <li>
-                                            <a href="contact" target="_blank">Contact us</a>
+                                            <a href="contact">Contact us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1638,7 +1648,7 @@
 
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
@@ -1650,7 +1660,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                </p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
