--- a/project.html
+++ b/project.html
@@ -368,12 +368,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://roilevelup.com/" target="_blank">Level Up Your Business - SaaS Tools and Growth
+                                    <h3><a href="https://roilevelup.com/" target="_blank">Level Up Your Business - SaaS
+                                            Tools and Growth
                                             Consulting</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://roilevelup.com/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://roilevelup.com/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -397,12 +398,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://app.thepathfinderhub.com/" target="_blank">Resume Builder</a></h3>
+                                    <h3><a href="https://app.thepathfinderhub.com/" target="_blank">Resume Builder</a>
+                                    </h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2"
-                                        href="https://app.thepathfinderhub.com/" target="_blank"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn direction__btn--2" href="https://app.thepathfinderhub.com/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -424,12 +426,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://shortlistme.com/" target="_blank">Skill-First Job Search Portal India |
+                                    <h3><a href="https://shortlistme.com/" target="_blank">Skill-First Job Search Portal
+                                            India |
                                             ShortlistMe</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://shortlistme.com/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://shortlistme.com/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -452,12 +455,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://superbullionwire.com/" target="_blank">Super Bullion Wire</a></h3>
+                                    <h3><a href="https://superbullionwire.com/" target="_blank">Super Bullion Wire</a>
+                                    </h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2"
-                                        href="https://superbullionwire.com/" target="_blank"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn direction__btn--2" href="https://superbullionwire.com/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -479,12 +483,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.peglobal.net/" target="_blank">International Recruitment Agency Ireland &
+                                    <h3><a href="https://www.peglobal.net/" target="_blank">International Recruitment
+                                            Agency Ireland &
                                             UK | Cork & Dublin</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.peglobal.net/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.peglobal.net/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -507,12 +512,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.amberoil.ie/" target="_blank">Heating Oil & Agri Diesel Supplier in North
+                                    <h3><a href="https://www.amberoil.ie/" target="_blank">Heating Oil & Agri Diesel
+                                            Supplier in North
                                             Cork & Beyond | Amber Oil</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.amberoil.ie/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.amberoil.ie/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -535,12 +541,13 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.mcci.ie/" target="_blank">Large Scale Microelectronics Technology Centre -
+                                    <h3><a href="https://www.mcci.ie/" target="_blank">Large Scale Microelectronics
+                                            Technology Centre -
                                             MCCI</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.mcci.ie/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.mcci.ie/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -563,11 +570,12 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.ikc.ie/" target="_blank">Home | The Irish Kennel Club</a></h3>
+                                    <h3><a href="https://www.ikc.ie/" target="_blank">Home | The Irish Kennel Club</a>
+                                    </h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.ikc.ie/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.ikc.ie/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -592,8 +600,8 @@
                                     <h3><a href="http://82.112.240.94:5173/" target="_blank">Heraklean</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="http://82.112.240.94:5173/" target="_blank"><svg
-                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="http://82.112.240.94:5173/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -1075,7 +1083,7 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="/" target="_blank">
+                    <a href="/">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                         <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -1089,7 +1097,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <a class="offcanvas__logo_link" href="/" target="_blank">
+                                    <a class="offcanvas__logo_link" href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                     </a>
                                 </div>
@@ -1131,19 +1139,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="/" target="_blank">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                                         <li>
-                                            <a href="about" target="_blank">About us</a>
+                                            <a href="about">About us</a>
                                         </li>
                                         <li>
-                                            <a href="blog" target="_blank">Blog update</a>
+                                            <a href="blog">Blog update</a>
                                         </li>
                                         <li>
-                                            <a href="services" target="_blank">Our services</a>
+                                            <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="team" target="_blank">Team</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1157,19 +1165,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="project" target="_blank">Portfolio </a>
+                                            <a href="project">Portfolio </a>
                                         </li>
                                         <li>
-                                            <a href="seo-services" target="_blank">Seo Services</a>
+                                            <a href="seo-services">Seo Services</a>
                                         </li>
                                         <li>
-                                            <a href="faq" target="_blank">FAQ</a>
+                                            <a href="faq">FAQ</a>
                                         </li>
                                         <li>
-                                            <a href="contact" target="_blank">Customer support</a>
+                                            <a href="contact">Customer support</a>
                                         </li>
                                         <li>
-                                            <a href="contact" target="_blank">Contact us</a>
+                                            <a href="contact">Contact us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1187,7 +1195,7 @@
 
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
@@ -1199,7 +1207,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right Reserved
+                                <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
                                 </p>
                             </div>
                         </div>
