--- a/what-is-software-development.html
+++ b/what-is-software-development.html
@@ -646,14 +646,18 @@
 
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>There are several types of <a href="software-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">software development,</a> each catering to specific needs:</p>
+                                <p>There are several types of <a href="software-development-services"
+                                        style="font-weight: bold; color: #FE0094;" target="_blank">software
+                                        development,</a> each catering to specific needs:</p>
                             </div>
                             <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h4>Web Development</h4>
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><a href="web-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">Web development</a> can be defined as building web sites and applications, which are
+                                <p><a href="web-development-services" style="font-weight: bold; color: #FE0094;"
+                                        target="_blank">Web development</a> can be defined as building web sites and
+                                    applications, which are
                                     installed in the world wide web. it can be sub-categorized as front end development
                                     which is concerned with the graphic and interface of a web site and the back end
                                     development which concerns with the working of the web site on the server.</p>
@@ -671,7 +675,9 @@
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Smartphone and tablet application development is more concerned with developing
                                 applications for these two devices. These applications can be developed to be used
-                                on the <a href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">Android, IOS</a> and other platforms among them.</p>
+                                on the <a href="mobile-app-development-services"
+                                    style="font-weight: bold; color: #FE0094;" target="_blank">Android, IOS</a> and
+                                other platforms among them.</p>
                         </div>
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                             <h4>Desktop Software Development</h4>
@@ -1026,7 +1032,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/" target="_blank">
+                        <a href="/">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -1040,7 +1046,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <a class="offcanvas__logo_link" href="/">
                                             <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
@@ -1084,19 +1090,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/" target="_blank">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about" target="_blank">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog" target="_blank">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services" target="_blank">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team" target="_blank">Team</a>
+                                                <a href="team">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -1111,19 +1117,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project" target="_blank">Portfolio </a>
+                                                <a href="project">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services" target="_blank">Seo Services</a>
+                                                <a href="seo-services">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq" target="_blank">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact" target="_blank">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -1143,7 +1149,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -1155,8 +1161,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
-                                        Reserved</p>
+                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
